--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -277,7 +277,7 @@ fr:
 
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
-    encryptable/file_entries:
+    encryptable_files:
       uploaded: Fichier téléchargé avec succès.
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
       uploaded_filename_is_empty: Le fichier n'a pas été nommé
