--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -74,6 +74,7 @@ de:
       uploaded_size_to_high: Die Datei ist zu gross zum hochladen. (Max. 10MB)
       uploaded_filename_is_empty: Die Datei muss benannt sein
       uploaded_file_inexistent: Datei ist inexistent
+      uploaded_file_blank: Die Datei darf nicht leer sein
       uploaded_filename_already_exists: Dateiname existiert bereits
     session:
       auth_failed: Ungültiger Benutzername / Passwort
