--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -74,6 +74,7 @@ en:
       uploaded_size_to_high: The file is too big to upload. (max. 10MB)
       uploaded_filename_is_empty: The file has to be named
       uploaded_file_inexistent: File is inexistent
+      uploaded_file_blank: File is not allowed to be blank
       uploaded_filename_already_exists: Filename already exists
     session:
       auth_failed: Authentication failed! Enter a correct username and password
