--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -74,6 +74,7 @@ fr:
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
       uploaded_filename_is_empty: Le fichier n'a pas été nommé
       uploaded_file_inexistent: Fichier est inexistant
+      uploaded_file_blank: Le fichier ne doit pas être vide
       uploaded_filename_already_exists: Le nom de fichier existe déjà
     session:
       auth_failed: L'authentification a échoué! Saisissez un nom d'utilisateur et mot de passe.
