added translations and fixed tests

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -87,7 +87,7 @@ ch_be:
     new:
       title: Nöi Zuägangsdate
     share:
-      title: Encryptable schicke
+      title: Datei teilä
 
   admin:
     title: Admin
