--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -89,7 +89,7 @@ de:
     new:
       title: Neue Zugangsdaten
     share:
-      title: Encryptable schicken
+      title: Datei teilen
 
   admin:
     title: Admin
