--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -89,7 +89,7 @@ fr:
     new:
       title: Nouveau compte
     share:
-      title: Partage Encryptable
+      title: Partage fichier
 
   admin:
     title: Admin
