--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -280,6 +280,10 @@ de:
 
     application:
       wait: Bitte warten Sie, bis  Ihre Team Passwörter neu verschlüsselt wurden.
+    folders:
+      created: Ein neuer Ordner ist erfolgreich erstellt worden.
+      updated: Der Ordner wurde erfolgreich aktualisiert.
+      deleted: Der Ordner wurde erfolgreich gelöscht.
     encryptable_files:
       uploaded: Die Datei wurde erfolgreich hochgeladen.
       uploaded_size_to_high: Die Datei ist zu gross zum hochladen. (Max. 10MB)
