--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -295,6 +295,11 @@ en:
       weak_password: To improve security you should change your login password to a more complex one.
       wrong_root: Login as root only from private IP accessible
     teams:
+      created: Successfully created a new team.
+      updated: Team was successfully updated.
+      deleted: Team was successfully deleted.
+      cannot_delete: Only admin may delete teams.
+      no_member: You are not member of this team.
       not_existing: "Team with id %{id} does not exist"
     teammembers:
       could_not_remove_last_teammember: Could not remove last teammember
