--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -278,6 +278,10 @@ fr:
 
     application:
       wait: S'il vous plaît attendre jusqu'à ce vos mots de passe a ètè nouveau cryptées.
+    folders:
+      created: Un nouveau dossier a été créé avec succès.
+      updated: Le dossier a été mis à jour avec succès.
+      deleted: Le dossier a été supprimé avec succès
     encryptable_files:
       uploaded: Fichier téléchargé avec succès.
       uploaded_size_to_high: Fichier est trop volumineux pour tèlècharger. (max. 10MB)
@@ -289,6 +293,11 @@ fr:
       weak_password: Pour améliorer la sécurité vous devez déterminer un mot de passe utilisateur plus complexe.
       wrong_root: Connexion en tant que root uniquement à partir d'une IP privée accessible
     teams:
+      created: Création d'une nouvelle équipe avec succès.
+      updated: L'équipe a été mise à jour avec succès.
+      deleted: L'équipe a été supprimée avec succès.
+      cannot_delete: Seul l'administrateur peut supprimer des équipes.
+      no_member: Vous n'êtes pas membre de cette équipe.
       not_existing: "Il n'y a pas d'équipe avec l'id %{id}"
     teammembers:
       could_not_remove_last_teammember: Il n’est pas possible de supprimer le dernier utilisateur de l'équipe
