--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -25,6 +25,7 @@ en:
   "no": "No"
   help: Help
   version: Version
+  copy_ccli_login: Copy CCLI Login
   logout: Logout
   auto_logout: Automatic sign out in
   contribute_on_github: Contribute on GitHub
