--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -68,7 +68,9 @@ ch_be:
           renew: '%{username} isch ernöieret worde, nöiä Token: %{token}'
       members:
         removed: Mitglied isch erfougrich entfernt worde
-
+    encryptables_sharing:
+      duplicated_name:
+        title: Du hesch die zuegangsdate scho mit derä person teilt
     encryptable_files:
       uploaded: D Datei isch erfougrich ufeglade worde
       uploaded_size_to_high: D Datei isch z gross für z ufelade. (Maximau 10MB)
