--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -41,6 +41,7 @@ en:
   new: New
   back: Back
   save: Save
+  share: Share
   close: Close
   hi_user: "Hi,"
   intro: Looking for a password?
@@ -90,6 +91,10 @@ en:
       title: New Credentials
     share:
       title: Share File
+
+  encryptable/sharing/file:
+    new:
+      title: "Share File"
 
   admin:
     title: Admin
