--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -43,6 +43,7 @@ fr:
   save: Sauvegarder
   share: Partager
   close: fermer
+  user: Utilisateur
   hi_user: "Salut, "
   intro: Vous cherchez un mot de passe?
   role: Rôle
