--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -42,6 +42,7 @@ fr:
   back: Retour
   save: Sauvegarder
   close: fermer
+  user: Utilisateur
   hi_user: "Salut, "
   intro: Vous cherchez un mot de passe?
   role: Rôle
