--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -42,6 +42,7 @@ de:
   back: Zurück
   save: Speichern
   close: Schliessen
+  user: Benutzer
   hi_user: "Hi, "
   intro: Du suchst ein Passwort?
   role: Rolle
