--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -60,7 +60,7 @@ fr:
         favourites: Appuyez pour rechercher dans les équipes favorites...
         all: Appuyez pour rechercher dans tout les équipes...
 
-  encryptable/credential:
+  encryptable/credentials:
     title: Comptes
     index_menu:
       create: Créer compte
@@ -338,7 +338,7 @@ fr:
         newPassword1: "Entrez un nouveau mot de passe:"
         newPassword2: "Confirmer le nouveau mot de passe:"
         wrongPassword: Mauvais mot de passe
-      encryptable/credential:
+      encryptable/credentials:
         accountname: Nom du compte
       team:
         name: Nom
