--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,437 +1,93 @@
-#  Copyright (c) 2008-2017, Puzzle ITC GmbH. This file is part of
-#  Cryptopus and licensed under the Affero General Public License version 3 or later.
-#  See the COPYING file at the top-level directory or at
-#  https://github.com/puzzle/cryptopus.
-
-# See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
-  fallback: "!WARNING! This is the Fallback Cryptopus! Do not write any new data it will not persist"
-  confirmation: Are you sure?
-  show: Show
-  edit: Edit
-  update: Update
-  create: Create
-  delete: Delete
-  cancel: Cancel
-  add: Add
-  description: Description
-  tag: Tag
+  fallback: 'WARNING! This is the Fallback Cryptopus! Do not write any new data it will not persist'
   username: Username
   password: Password
-  actions: Actions
-  download: Download
-  "yes": "Yes"
-  "no": "No"
   help: Help
   version: Version
-  logout: Logout
-  auto_logout: auto-logout in
   settings: Settings
-  recrypt_requests: Recrypt requests
-  users: Users
-  user: User
-  profile_title: Profile
-  change_password: Change password
-  last_login_date_and_from: "The last login was on %{last_login_at} from %{last_login_from}"
-  last_login_date_and_from_country: "The last login was on %{last_login_at} from %{last_login_from} (%{last_login_country})"
-  last_login_date: "The last login was on %{last_login_at}"
-  unencrypted_field_caption: not encrypted
-  folder: Folder
-  team: Team
-  move: Move
-  new: New
-  save: Save
-  close: Close
-  hi_user: "Hi,"
-  intro: Looking for a password?
-  role: Role
-  empty: empty
-
-  i18n:
-    language:
-      name: English
-
-  search:
-    title: Search
-    index:
-      hi_user: "Hi %{username}! Want to recover a password?"
-      no_results_found: no results found
-      type_to_search: Type to search...
-
-  encryptables:
-    title: Encryptables
-    index_menu:
-      create: Create Account
-      folder: Folder
-    show_menu:
-      add_attachment: Add Attachment
-    edit:
-      title: Edit Account
-      random_password: Random password
-      edit_password_placeholder: Click or focus to set ...
-      team_placeholder: Select a Team
-      folder_placeholder: Select a Folder
-      password_strength: Password Strength
-      password_strengths:
-        weak: Weak
-        fair: Fair
-        good: Good
-        strong: Strong
-    show:
-      account: Account
-      last_change: "Last change was %{time_ago} ago"
-      attachments: Attachments
-      file: File
-      show_password: Show password
-      show_username: Show username
-      copy_password: Copy password
-      copy_username: Copy username
-      add_attachment: Add Attachment
-    new:
-      title: New Credentials
+  last_login_date_and_from: 'The last login was on %{last_login_at} from %{last_login_from}'
+  last_login_date_and_from_country: 'The last login was on %{last_login_at} from %{last_login_from} (%{last_login_country})'
+  last_login_date: 'The last login was on %{last_login_at}'
 
   admin:
-    title: Admin
-    maintenance_tasks:
-      index:
-        title: Maintenance Tasks
-        unavailable: No maintenance tasks available
-        maintenance_task: Maintenance Tasks
-        run: execute
-        prepare: prepare
-        execute: execute
-        executed_at: Executed At
-        status: Status
-        output: Output
-        executor: Executor
-    settings:
-      index:
-        title: Edit Settings
-        save: Save changes
-        ldap: Test LDAP connection
-        whitelisted_countries: Whitelisted Countries
-        whitelisted_ips: Whitelisted IP Addresses
-        whitelist_placeholder_geo_ip_deactivated: If no IP's are added every IP will be allowed
-        no_ips_selected: If nothing is selected, only private and whitelisted ips are authorized
-        specify_single_ip: To specify a single IP address, just enter it like
-        range:
-          specify_range_of_ips: To specify a range you can enter the IP address with the subnet mask
-          range_between: This would be the range between
-          and: and
-        ipv6_allowed: IPv6 is allowed and can be entered like this
-        geo_ip_disabled: Source IP filter is disabled. Please install geoip db
     recryptrequests:
-      index:
-        title: Re-encryption requests
-        user: User
-        admin_required: Admin required
-        recrypt: Recrypt
-      request:
-        request_sent: A request to recrypt your folder passwords was sent. Wait until she recrypted your passwords.
       uncrypterror:
-        new_password: New password?!
-        ldap_password_changed: Your LDAP Password has changed since your last login.
-        ldap_enter_old_password: Please enter your old LDAP Password to decrypt your Private_key.
-        ldap_old_password: Your old LDAP Password
-        ldap_new_password: Your new LDAP Password
-        ldap_password: Your LDAP Password
-        forgot_password_recrypt: |
-          When you forgot your old password, just the teams which aren't private will be decrypted.
-          All private teams which would become unaccessible for any users will be deleted.
-          After the request was send you have to wait until an admin decrypts your passwords.
-        recrypt: Recrypt
         send: Send request
     users:
-      index_menu:
-        create: Create new User
-      edit:
-        title: Editing user
-        reset_password: Reset password
-        warning: By resetting the password, the user loses access to all his private teams. All teams, where he is the only member will be deleted
       index:
-        title: List of all Cryptopus users
-        username: Username
-        name: Name
-        provider_uid: PROVIDER UID
         last_login_at: Last login at
         last_login_from: Last login from
-        admin: Admin
-        action: Action
-        locked: Locked Users
-        unlock: Unlock
-      last_teammember_teams:
-        message: Before you can delete this user you have to delete the following teams, because the user is the last member.
-        delete_user: Are you sure you want to delete this User?
-        destroy: Destroy User
-      new:
-        title: New User
-    teams:
-      index:
-        title: Teams
-        teamname: Teamname
-        num_folders: Number of Folders
-        num_encryptables: Number of Encryptables
-        members: Members
-    user_roles:
-      user: User
-      conf_admin: Conf Admin
-      admin: Admin
-
-  folders:
-    title: Folders
-    name: Folder name
-    index_menu:
-      create: Create Folder
-    edit:
-      title: Editing Folder
-    new:
-      title: New Folder
-    show:
-      move: Move account to other folder
-      title: "Encryptables in folder %{folder_name} for team %{team_name}"
-    no_encryptables: No Encryptables
-    tooltips:
-      delete: Delete the folder
-      edit: Edit the folder
-  encryptable_files:
-    new:
-      title: Add new attachment to account
-      upload: Upload
-      upload_file: File to upload
-      choose_file: Choose a file
-      reupload: Select a different file
-      selected_file: Selected file
 
   session:
     user_password:
-      title: Log in
       submit: Login
     local:
       new:
-        title: Log in
         submit: Login
     oidc:
       sleep: I'm currently asleep to protect your precious data from session thieves. Feel free to wake me up any time
       submit: Wake me up!
     destroy:
-      title: Logout
-      message: Bye
-      hint: Please clear your browser cache.
-      expired: You have been automatically logged out.
-    newuser:
-      title: Welcome to Cryptopus
-      description: We created a new keypair for you. Enjoy Cryptopus.
+      expired: You have been automatically logged out
     show_update_password:
-      title: Change password
-      old: Old password
-      new: New password
-      new_retype: New password (retype)
       submit: Change
+
   recrypt:
     oidc:
       new:
-        notice: Please enter your previous Cryptopus Password to migrate your account to OpendID connect / Keycloak
+        notice: Please enter your previous Cryptopus Password to migrate your credentials to OpendID connect / Keycloak
         cryptopus_password: Your Cryptopus Password
         migrate: Migrate
-  teammembers:
-    new:
-      title: Add a new teammember
-    confirm:
-      delete: "Remove %{entry_label} from team ?"
-    show: Show members
-    hide: Hide members
 
-  teams:
-    title: Teams
-    none_available: No Teams available
-    loading: Loading ...
-    form:
-      enabled: Enabled
-      private: Private
-    index_menu:
-      create: Create new team
-    edit_button:
-      title: Edit team properties.
-    config_button:
-      title: Add or remove Members or API-Users.
-    index:
-      title: "You are member of the following teams:"
-      team: Team
-      no_content: No matches
-      search: Search results for
-    new:
-      title: New Team
-    edit:
-      title: Edit Team
-    description:
-      private: admins have no access if checked
-    show:
-      title: "Team %{team_name}"
-      folder: Folder
-      members: Members
-      add_member: Add member
-      admins: Admins
-    configure:
-      title: Edit Team Members and Api Users
-    delete: Delete the team
-    favorise: Favorise the team
-    defavorise: Defavorise the team
-    no_folders: No Folders
   profile:
-    index:
-      title: "Profile of %{label}"
     info:
-      info: Info
       last_login_at: Last login at
       last_login_from: Last login from
     api_users:
-      api_users: Api Users
-      no_api_users: No api users
-      username: Username
-      description: Description
-      enter_description: click to enter description..
-      valid_until: Valid until
-      valid_for: Valid for
       last_login_at: Last login at
       last_login_from: Last login from
-      locked: Locked
-      options:
-        one_min: One minute
-        five_mins: Five minutes
-        twelve_hours: Twelve hours
-        infinite: Infinite
-      delete:
-        title: Remove Api-User
-        content: "Delete Api-User %{username}?"
 
   flashes:
-    something_went_wrong: Something went wrong
     api:
       admin:
         users:
           update:
-            user: " Updated user is now a user"
-            conf_admin: "Updated user is now a conf admin"
-            admin: "Updated user is now an admin"
-          destroy:
-            own_user: "You can't delete yourself"
-            success: "Deleted user %{username}"
-          no_access: "Access denied"
-        settings:
-          test_ldap_connection:
-            successful: "Connection to Ldap Server %{hostname} successful"
-            failed: "Connection to Ldap Server %{hostname} failed"
-            no_hostname_present: "No hostname present"
+            user: Updated user is now a user
+            conf_admin: Updated user is now a conf admin
+            admin: Updated user is now an admin
       api-users:
-        create: "%{username} has been created"
         update:
-          description: "Updated description for user %{username}"
-          valid_for: "User %{username} will now be valid %{valid_for} after renewal"
           time:
             one_min: for one minute
             five_mins: for five minutes
             twelve_hours: for twelve hours
             infinite: without limit
-        destroy: "Removed %{username}"
-        lock: "Locked %{username}"
-        unlock: "Unlocked %{username}"
+        lock: 'Locked %{username}'
+        unlock: 'Unlocked %{username}'
         token:
-          renew: "Renewed %{username}, new token: %{token}"
-        ccli_login:
-          copied: CCLI Login command was copied!
+          renew: 'Renewed %{username}, new token: %{token}'
       members:
         removed: Member was successfully removed
-        added: Member was successfully added
-      errors:
-        auth_failed: Authentication failed
-        user_not_logged_in: User not logged in
-        invalid_request: Invalid Request
-        record_not_found: Record not found
-        delete_failed: Could not delete the record.
-    admin:
-      admin:
-        no_access: Access denied
-      settings:
-        example: These are example settings. Please overwrite them with your settings.
-        successfully_updated: Your settings were successfully updated.
-      recryptrequests:
-        some: "Successfully recrypted some passwords for %{user_name}"
-        all: "Successfully recrypted all passwords for %{user_name}"
-        resetpassword:
-          success: Successfully reset password
-          required: The password must not be blank
-      users:
-        created: Successfully created a new user.
-        destroy:
-          own_user: You can't delete yourself
-          root: Root cannot be deleted
-        update:
-          root: Root cannot be updated
-          not_db: Non Db user cannot be updated
-      maintenance_tasks:
-        succeed: Task was executed successfully.
-        failed: Task failed. See logs for more information.
-        ldap_connection:
-          failed: No configured Ldap Server could be reached.
 
-    encryptables:
-      created: Account was successfully created.
-      updated: Account was successfully updated.
-      deleted: Account was successfully deleted
-      moved: Account was successfully moved
-      username_copied: Username was copied
-      password_copied: Password was copied
-    application:
-      wait: Wait for the recryption of your team passwords.
-    folders:
-      created: Successfully created a new folder.
-      updated: Folder was successfully updated.
-      deleted: Folder was successfully deleted
     encryptable_files:
-      deleted: Attachment was successfully deleted
-      uploaded: File was successfully uploaded.
+      uploaded: File was successfully uploaded
       uploaded_size_to_high: The file is too big to upload. (max. 10MB)
       uploaded_filename_is_empty: The file has to be named
+      uploaded_file_inexistent: File is inexistent
       uploaded_file_blank: File is not allowed to be blank
+      uploaded_filename_already_exists: Filename already exists
     session:
-      weak_password: To improve security you should change your login password to a more complex one.
-      welcome: Welcome to Cryptopus, first you have to create a new account. Please enter a new password
-      auth_failed: Authentication failed! Enter a correct username and password.
-      only_local: Only local users are allowed to change their password.
-      new_password_set: You successfully set the new password
-      new_passwords_not_equal: New passwords not equal
-      wrong_password: Invalid user / password
-      wrong_root: Login as root only from private IP accessible
-      not_local: You are not a local user!
-      locked: User is currently locked. Pleas e try to login again a bit later or contact the administrator if your user has been locked permanently
-    recryptrequests:
-      recrypted: You have successfully recrypted the password
-      wait: Wait for the recryption of your team passwords
-      wrong_password: Your password was wrong"
+      auth_failed: Authentication failed! Enter a correct username and password
+      weak_password: "To improve security you should change your login password to a more complex one"
     teams:
-      wrong_user_password: Enter a correct username and password or check the LDAP Settings
-      created: Successfully created a new team.
-      updated: Team was successfully updated.
-      deleted: Team was successfully deleted
-      cannot_delete: Only admin may delete teams
-      no_member: You are not member of this team
-      not_existing: "Team with id %{id} does not exist"
-    teammembers:
-      could_not_remove_last_teammember: Could not remove last teammember
-      could_not_remove_admin_from_private_team: Could not remove admin from private team
+      not_existing: 'Es existiert kein Team mit der Id %{id}'
 
   confirm:
-    delete: "Delete %{entry_class} %{entry_label} ?"
-    changeAdmin: give/remove Admin-Rights?
-    deleteWithTeams: "Delete all teams where %{username} is the last teammember"
+    delete: 'Delete %{entry_class} %{entry_label} ?'
 
   #Validation Errors
   activerecord:
     errors:
-      template:
-        body: ""
-        header: ""
       models:
         user:
           new_password_invalid: Your NEW password was wrong
@@ -441,51 +97,9 @@ en:
             name:
               taken: File has already been taken
 
-  password_strength:
-    weak: The password is weak
-    good: The password is good
-    strong: The password is strong!
-
-  tooltips:
-    all_teams: All Teams
-    favorites: Favorites
-    settings_profile: Settings & Profile
-    add_folder: Add a new Folder
-    add_account: Add a new Account
-    account_details: Show Account Details
-    delete_folder: Delete the Folder
-    delete_account: Delete the Account
-    configure: Configure Members
-
-
   #Pundit
   pundit:
     default: Access denied
     team_policy:
       update?: You are not a member of this team
-      destroy?: Only admin may delete teams
-  helpers:
-    label:
-      account:
-        name: Name
-      team:
-        name: Name
-        description: Description
-
-  validations:
-    name:
-      present: Name must be present
-      too_long: Name is too long
-      duplicate_name: Name exists already
-    description:
-      too_long: Description is too long
-    file:
-      present: File must be present
-    team:
-      present: Team must be present
-    folder:
-      present: Folder must be present
-    cleartext username:
-      too_long: Username is too long
-    cleartext password:
-      too_long: Password is too long
+      destroy?: Only admins are allowed to delete teams
