Add new translations for sharing file and start with pop up for sharing

--- a/frontend/translations/ch_be.yml
+++ b/frontend/translations/ch_be.yml
@@ -94,6 +94,8 @@ ch_be:
   encryptable/sharing/file:
     new:
       title: "Datei teilä"
+    receiver:
+      name: Wäu ä empfänger
 
   admin:
     title: Admin
