Add frontend and controller logic

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -96,6 +96,10 @@ de:
           attributes:
             name:
               taken: Datei ist schon hochgeladen worden
+        encryptable:
+          attributes:
+            name:
+              taken: Du hast diese Zugangsdaten bereits mit dieser Person geteilt
 
   #Pundit
   pundit:
