--- a/config/locales/ch_be.yml
+++ b/config/locales/ch_be.yml
@@ -96,6 +96,10 @@ ch_be:
           attributes:
             name:
               taken: Datei isch schomau ufägladä wordä
+        encryptable:
+          attributes:
+            name:
+              taken: Du hesch die zuegangsdate scho mit derä person teilt
 
   #Pundit
   pundit:
