--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -96,6 +96,10 @@ en:
           attributes:
             name:
               taken: File has already been taken
+        encryptable:
+          attributes:
+            name:
+              taken: You shared these credentials already with this person
 
   #Pundit
   pundit:
