--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -41,6 +41,7 @@ fr:
   new: Nouveau
   back: Retour
   save: Sauvegarder
+  share: Partager
   close: fermer
   user: Utilisateur
   hi_user: "Salut, "
@@ -60,7 +61,7 @@ fr:
         favourites: Appuyez pour rechercher dans les équipes favorites...
         all: Appuyez pour rechercher dans tout les équipes...
 
-  encryptable/credentials:
+  encryptable/credential:
     title: Comptes
     index_menu:
       create: Créer compte
@@ -89,6 +90,14 @@ fr:
       add_attachment: Ajouter un attachement
     new:
       title: Nouveau compte
+    share:
+      title: Partage fichier
+
+  encryptable/sharing/file:
+    new:
+      title: "partager fichier"
+    receiver:
+      name: Choisir le récepteur
 
   admin:
     title: Admin
@@ -338,7 +347,7 @@ fr:
         newPassword1: "Entrez un nouveau mot de passe:"
         newPassword2: "Confirmer le nouveau mot de passe:"
         wrongPassword: Mauvais mot de passe
-      encryptable/credentials:
+      encryptable/credential:
         accountname: Nom du compte
       team:
         name: Nom
