--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -61,7 +61,7 @@ en:
         favourites: Type to search in favourite teams...
         all: Type to search in all teams...
 
-  encryptable/credential:
+  encryptable/credentials:
     title: Credentials
     index_menu:
       create: Create Credentials
@@ -347,7 +347,7 @@ en:
         newPassword1: "Enter new password:"
         newPassword2: "Confirm new password:"
         wrongPassword: Wrong password
-      encryptable/credential:
+      encryptable/credentials:
         accountname: Accountname
       team:
         name: Name
