Implement backend for file sharing

--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -95,7 +95,7 @@ en:
 
   encryptable/sharing/file:
     new:
-      title: "Share File"
+      title: Send file to
     receiver:
       name: Choose receiver
 
