--- a/frontend/translations/fr.yml
+++ b/frontend/translations/fr.yml
@@ -93,7 +93,7 @@ fr:
     share:
       title: Partage fichier
 
-  encryptable/sharing/file:
+  encryptable/transfering/file:
     new:
       title: "partager fichier"
     receiver:
@@ -298,6 +298,13 @@ fr:
       uploaded_filename_is_empty: Le fichier n'a pas été nommé
       uploaded_file_inexistent: Fichier est inexistant
       uploaded_filename_already_exists: Le nom de fichier existe déjà
+    encryptable_transfer:
+      credentials:
+        transferred: Transfert réussi des informations d'identification au destinataire
+        transfer_failed: Échec du transfert des informations d'identification au destinataire
+      file:
+        transferred: Le fichier a été transféré avec succès au destinataire
+        transfer_failed: Échec du transfert du fichier au destinataire
     session:
       auth_failed: L'authentification a échoué! Saisissez un nom d'utilisateur et mot de passe.
       weak_password: Pour améliorer la sécurité vous devez déterminer un mot de passe utilisateur plus complexe.
