--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -324,6 +324,8 @@ de:
     delete_folder: Ordner löschen
     delete_encryptables: Zugangsdaten löschen
     configure: Konfiguriere Mitglieder
+    encryption_algorithm: "Dieses Team verwendet "
+    key_size: " mit einer Schlüsselgrösse von "
 
   helpers:
     label:
