--- a/frontend/translations/en.yml
+++ b/frontend/translations/en.yml
@@ -324,6 +324,8 @@ en:
     delete_folder: Delete the Folder
     delete_encryptables: Delete the Credentials
     configure: Configure Members
+    encryption_algorithm: "This Team uses "
+    key_size: " with a keysize of "
 
   helpers:
     label:
