Readd translations for flash when successfully file transfer

--- a/frontend/translations/de.yml
+++ b/frontend/translations/de.yml
@@ -41,9 +41,10 @@ de:
   new: Neu
   back: Zurück
   save: Speichern
+  share: Teilen
   close: Schliessen
   user: Benutzer
-  hi_user: "Hi, "
+  hi_user: "Moin, "
   intro: Du suchst ein Passwort?
   role: Rolle
   empty: leer
@@ -90,6 +91,14 @@ de:
       blank: Leer
     new:
       title: Neue Zugangsdaten
+    share:
+      title: Datei teilen
+
+  encryptable/transfering/file:
+    new:
+      title: "Datei teilen"
+    receiver:
+      name: Empfänger auswählen
 
   admin:
     title: Admin
@@ -290,6 +299,13 @@ de:
       uploaded_filename_is_empty: Die Datei muss benannt sein
       uploaded_file_inexistent: Datei ist inexistent
       uploaded_filename_already_exists: Dateiname existiert bereits
+    encryptable_transfer:
+      credentials:
+        transferred: Zugangsdaten erfolgreich dem Empfänger übermittelt
+        transfer_failed: Übermittlung der Zugangsdaten mit dem Empfänger fehlgeschlagen
+      file:
+        transferred: Datei erfolgreich dem Empfänger übermittelt
+        transfer_failed: Übermittlung der Datei mit dem Empfänger fehlgeschlagen
     session:
       auth_failed: Ungültiger Benutzername / Passwort.
       weak_password: Um die Sicherheit zu verbessern, sollten Sie ein komplexeres Passwort wählen
